--- a/index.html
+++ b/index.html
@@ -22,45 +22,43 @@
   <body>
     <!-- ===== HEADER ===== -->
     <header class="header">
-      <div class="container header-container">
-        <nav class="header-nav">
-          <a href="./index.html" class="logo">
-            Web<span class="logo-accent">Studio</span>
-          </a>
+      <nav class="header-nav container">
+        <a href="./index.html" class="logo">
+          Web<span class="logo-accent">Studio</span>
+        </a>
 
-          <ul class="menu">
-            <li class="menu-item">
-              <a href="./index.html" class="menu-link">Studio</a>
-            </li>
-            <li class="menu-item">
-              <a href="" class="menu-link">Portfolio</a>
-            </li>
-            <li class="menu-item">
-              <a href="" class="menu-link">Contacts</a>
-            </li>
-          </ul>
-        </nav>
+        <ul class="menu">
+          <li class="menu-item">
+            <a href="./index.html" class="menu-link">Studio</a>
+          </li>
+          <li class="menu-item">
+            <a href="" class="menu-link">Portfolio</a>
+          </li>
+          <li class="menu-item">
+            <a href="" class="menu-link">Contacts</a>
+          </li>
+        </ul>
+      </nav>
 
-        <address class="contacts">
-          <ul class="contacts-list">
-            <li class="contacts-item">
-              <a href="mailto:info@devstudio.com" class="contacts-link"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="contacts-item">
-              <a href="tel:+110001111111" class="contacts-link"
-                >+11 (000) 111-11-11</a
-              >
-            </li>
-          </ul>
-        </address>
-      </div>
+      <address class="contacts container">
+        <ul class="contacts-list">
+          <li class="contacts-item">
+            <a href="mailto:info@devstudio.com" class="contacts-link">
+              info@devstudio.com
+            </a>
+          </li>
+          <li class="contacts-item">
+            <a href="tel:+110001111111" class="contacts-link">
+              +11 (000) 111-11-11
+            </a>
+          </li>
+        </ul>
+      </address>
     </header>
 
     <!-- ===== MAIN ===== -->
     <main>
-      <!-- SECTION 1 (HERO) -->
+      <!-- HERO -->
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
@@ -68,7 +66,7 @@
         </div>
       </section>
 
-      <!-- SECTION 2 (ADVANTAGES) -->
+      <!-- ADVANTAGES -->
       <section class="advantages">
         <div class="container">
           <h2 class="section-title visually-hidden">Our Advantages</h2>
@@ -97,15 +95,14 @@
             <li class="advantages-item">
               <h3 class="advantages-title">Technologies</h3>
               <p class="advantages-text">
-                Design practice focused on digital experiences. We bring forth a
-                deep passion for problem-solving.
+                Design practice focused on digital experiences.
               </p>
             </li>
           </ul>
         </div>
       </section>
 
-      <!-- SECTION 3 (TEAM) -->
+      <!-- TEAM -->
       <section class="team">
         <div class="container">
           <h2 class="section-title">Our Team</h2>
