--- a/index.html
+++ b/index.html
@@ -22,154 +22,44 @@
   <body>
     <!-- ===== HEADER ===== -->
     <header class="header">
-      <nav class="header-nav container">
-        <a href="./index.html" class="logo">
-          Web<span class="logo-accent">Studio</span>
-        </a>
+      <div class="container">
+        <nav class="nav">
+          <a href="/" class="logo">
+            Web<span class="logo-studio">Studio</span>
+          </a>
 
-        <ul class="menu">
-          <li class="menu-item">
-            <a href="./index.html" class="menu-link">Studio</a>
-          </li>
-          <li class="menu-item">
-            <a href="" class="menu-link">Portfolio</a>
-          </li>
-          <li class="menu-item">
-            <a href="" class="menu-link">Contacts</a>
-          </li>
-        </ul>
-      </nav>
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a href="/" class="nav-link">Studio</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
 
-      <address class="contacts container">
-        <ul class="contacts-list">
-          <li class="contacts-item">
-            <a href="mailto:info@devstudio.com" class="contacts-link">
-              info@devstudio.com
-            </a>
-          </li>
-          <li class="contacts-item">
-            <a href="tel:+110001111111" class="contacts-link">
-              +11 (000) 111-11-11
-            </a>
-          </li>
-        </ul>
-      </address>
+        <address class="address">
+          <ul class="address-list">
+            <li class="address-item">
+              <a href="mailto:info@devstudio.com" class="address-link">
+                info@devstudio.com
+              </a>
+            </li>
+            <li class="address-item">
+              <a href="tel:+110001111111" class="address-link">
+                +11 (000) 111-11-11
+              </a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
-    <!-- ===== MAIN ===== -->
-    <main>
-      <!-- HERO -->
-      <section class="hero">
-        <div class="container">
-          <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button type="button" class="hero-btn">Order Service</button>
-        </div>
-      </section>
+    <main></main>
 
-      <!-- ADVANTAGES -->
-      <section class="advantages">
-        <div class="container">
-          <h2 class="section-title visually-hidden">Our Advantages</h2>
-          <ul class="advantages-list">
-            <li class="advantages-item">
-              <h3 class="advantages-title">Strategy</h3>
-              <p class="advantages-text">
-                Our goal is to identify the business problem to walk away with
-                the perfect and creative solution.
-              </p>
-            </li>
-            <li class="advantages-item">
-              <h3 class="advantages-title">Punctuality</h3>
-              <p class="advantages-text">
-                Bring the key message to the brand's audience for the best price
-                within the shortest possible time.
-              </p>
-            </li>
-            <li class="advantages-item">
-              <h3 class="advantages-title">Diligence</h3>
-              <p class="advantages-text">
-                Research and confirm brands with the strongest digital growth
-                opportunities and minimize risk.
-              </p>
-            </li>
-            <li class="advantages-item">
-              <h3 class="advantages-title">Technologies</h3>
-              <p class="advantages-text">
-                Design practice focused on digital experiences.
-              </p>
-            </li>
-          </ul>
-        </div>
-      </section>
-
-      <!-- TEAM -->
-      <section class="team">
-        <div class="container">
-          <h2 class="section-title">Our Team</h2>
-          <ul class="team-list">
-            <li class="team-item">
-              <img
-                src="./images/mark-guerrero.jpg"
-                alt="Product Designer Mark Guerrero"
-                width="264"
-              />
-              <div class="team-card">
-                <h3 class="team-name">Mark Guerrero</h3>
-                <p class="team-position">Product Designer</p>
-              </div>
-            </li>
-
-            <li class="team-item">
-              <img
-                src="./images/tom-ford.jpg"
-                alt="Frontend Developer Tom Ford"
-                width="264"
-              />
-              <div class="team-card">
-                <h3 class="team-name">Tom Ford</h3>
-                <p class="team-position">Frontend Developer</p>
-              </div>
-            </li>
-
-            <li class="team-item">
-              <img
-                src="./images/camila-garcia.jpg"
-                alt="Marketing specialist Camila Garcia"
-                width="264"
-              />
-              <div class="team-card">
-                <h3 class="team-name">Camila Garcia</h3>
-                <p class="team-position">Marketing</p>
-              </div>
-            </li>
-
-            <li class="team-item">
-              <img
-                src="./images/daniel-wilson.jpg"
-                alt="UI Designer Daniel Wilson"
-                width="264"
-              />
-              <div class="team-card">
-                <h3 class="team-name">Daniel Wilson</h3>
-                <p class="team-position">UI Designer</p>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </section>
-    </main>
-
-    <!-- ===== FOOTER ===== -->
-    <footer class="footer">
-      <div class="container">
-        <a href="./index.html" class="logo footer-logo">
-          Web<span class="logo-accent footer-logo-accent">Studio</span>
-        </a>
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </div>
-    </footer>
+    <footer></footer>
   </body>
 </html>
