--- a/index.html
+++ b/index.html
@@ -22,34 +22,34 @@
   <body>
     <!-- ===== HEADER ===== -->
     <header class="header">
-      <div class="container">
-        <nav class="nav">
-          <a href="/" class="logo">
-            Web<span class="logo-studio">Studio</span>
+      <div class="container header-container">
+        <nav class="header-nav">
+          <a href="./index.html" class="logo">
+            Web<span class="logo-accent">Studio</span>
           </a>
 
-          <ul class="nav-list">
-            <li class="nav-item">
-              <a href="/" class="nav-link">Studio</a>
+          <ul class="menu">
+            <li class="menu-item">
+              <a href="./index.html" class="menu-link">Studio</a>
             </li>
-            <li class="nav-item">
-              <a href="" class="nav-link">Portfolio</a>
+            <li class="menu-item">
+              <a href="" class="menu-link">Portfolio</a>
             </li>
-            <li class="nav-item">
-              <a href="" class="nav-link">Contacts</a>
+            <li class="menu-item">
+              <a href="" class="menu-link">Contacts</a>
             </li>
           </ul>
         </nav>
 
-        <address class="address">
-          <ul class="address-list">
-            <li class="address-item">
-              <a href="mailto:info@devstudio.com" class="address-link">
+        <address class="contacts">
+          <ul class="contacts-list">
+            <li class="contacts-item">
+              <a href="mailto:info@devstudio.com" class="contacts-link">
                 info@devstudio.com
               </a>
             </li>
-            <li class="address-item">
-              <a href="tel:+110001111111" class="address-link">
+            <li class="contacts-item">
+              <a href="tel:+110001111111" class="contacts-link">
                 +11 (000) 111-11-11
               </a>
             </li>
@@ -59,7 +59,6 @@
     </header>
 
     <main></main>
-
     <footer></footer>
   </body>
 </html>
