--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <title>WebStudio</title>
 
+    <!-- modern-normalize -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
     />
 
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,6 +18,7 @@
       rel="stylesheet"
     />
 
+    <!-- Styles -->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
@@ -33,10 +36,10 @@
               <a href="./index.html" class="menu-link">Studio</a>
             </li>
             <li class="menu-item">
-              <a href="" class="menu-link">Portfolio</a>
+              <a href="#" class="menu-link">Portfolio</a>
             </li>
             <li class="menu-item">
-              <a href="" class="menu-link">Contacts</a>
+              <a href="#" class="menu-link">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -58,7 +61,91 @@
       </div>
     </header>
 
-    <main></main>
+    <!-- ===== MAIN ===== -->
+    <main>
+      <!-- ===== PORTFOLIO ===== -->
+      <section class="portfolio">
+        <div class="container">
+          <h2 class="portfolio-title">Our Portfolio</h2>
+
+          <ul class="portfolio-list">
+            <li class="portfolio-item">
+              <img
+                src="./images/banking-app.jpg"
+                alt="Banking App"
+                width="360"
+              />
+              <div class="portfolio-content">
+                <h3 class="portfolio-item-title">Banking App</h3>
+                <p class="portfolio-item-text">App</p>
+              </div>
+            </li>
+
+            <li class="portfolio-item">
+              <img
+                src="./images/cashless-payment.jpg"
+                alt="Cashless Payment"
+                width="360"
+              />
+              <div class="portfolio-content">
+                <h3 class="portfolio-item-title">Cashless Payment</h3>
+                <p class="portfolio-item-text">Marketing</p>
+              </div>
+            </li>
+
+            <li class="portfolio-item">
+              <img
+                src="./images/meditation-app.jpg"
+                alt="Meditation App"
+                width="360"
+              />
+              <div class="portfolio-content">
+                <h3 class="portfolio-item-title">Meditation App</h3>
+                <p class="portfolio-item-text">App</p>
+              </div>
+            </li>
+
+            <li class="portfolio-item">
+              <img
+                src="./images/taxi-service.jpg"
+                alt="Taxi Service"
+                width="360"
+              />
+              <div class="portfolio-content">
+                <h3 class="portfolio-item-title">Taxi Service</h3>
+                <p class="portfolio-item-text">Marketing</p>
+              </div>
+            </li>
+
+            <li class="portfolio-item">
+              <img
+                src="./images/screen-illustrations.jpg"
+                alt="Screen Illustrations"
+                width="360"
+              />
+              <div class="portfolio-content">
+                <h3 class="portfolio-item-title">Screen Illustrations</h3>
+                <p class="portfolio-item-text">Design</p>
+              </div>
+            </li>
+
+            <li class="portfolio-item">
+              <img
+                src="./images/online-courses.jpg"
+                alt="Online Courses"
+                width="360"
+              />
+              <div class="portfolio-content">
+                <h3 class="portfolio-item-title">Online Courses</h3>
+                <p class="portfolio-item-text">Marketing</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+
+    <!-- ===== FOOTER ===== -->
     <footer></footer>
   </body>
 </html>
