--- a/index.html
+++ b/index.html
@@ -3,149 +3,116 @@
   <head>
     <meta charset="UTF-8" />
     <title>WebStudio</title>
-
-    <!-- modern-normalize -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
-    />
-
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
-
-    <!-- Styles -->
-    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
-    <!-- ===== HEADER ===== -->
-    <header class="header">
-      <div class="container header-container">
-        <nav class="header-nav">
-          <a href="./index.html" class="logo">
-            Web<span class="logo-accent">Studio</span>
-          </a>
+    <header>
+      <nav>
+        <a href="./index.html">WebStudio</a>
+        <ul>
+          <li><a href="./index.html">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
+        </ul>
+      </nav>
 
-          <ul class="menu">
-            <li class="menu-item">
-              <a href="./index.html" class="menu-link">Studio</a>
-            </li>
-            <li class="menu-item">
-              <a href="#" class="menu-link">Portfolio</a>
-            </li>
-            <li class="menu-item">
-              <a href="#" class="menu-link">Contacts</a>
-            </li>
-          </ul>
-        </nav>
-
-        <address class="contacts">
-          <ul class="contacts-list">
-            <li class="contacts-item">
-              <a href="mailto:info@devstudio.com" class="contacts-link">
-                info@devstudio.com
-              </a>
-            </li>
-            <li class="contacts-item">
-              <a href="tel:+110001111111" class="contacts-link">
-                +11 (000) 111-11-11
-              </a>
-            </li>
-          </ul>
-        </address>
-      </div>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
     </header>
 
-    <!-- ===== MAIN ===== -->
     <main>
-      <!-- ===== PORTFOLIO ===== -->
-      <section class="portfolio">
-        <div class="container">
-          <h2 class="portfolio-title">Our Portfolio</h2>
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
 
-          <ul class="portfolio-list">
-            <li class="portfolio-item">
-              <img
-                src="./images/banking-app.jpg"
-                alt="Banking App"
-                width="360"
-              />
-              <div class="portfolio-content">
-                <h3 class="portfolio-item-title">Banking App</h3>
-                <p class="portfolio-item-text">App</p>
-              </div>
-            </li>
+      <section>
+        <h2>Our Advantages</h2>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands with the strongest digital growth
+              opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
 
-            <li class="portfolio-item">
-              <img
-                src="./images/cashless-payment.jpg"
-                alt="Cashless Payment"
-                width="360"
-              />
-              <div class="portfolio-content">
-                <h3 class="portfolio-item-title">Cashless Payment</h3>
-                <p class="portfolio-item-text">Marketing</p>
-              </div>
-            </li>
-
-            <li class="portfolio-item">
-              <img
-                src="./images/meditation-app.jpg"
-                alt="Meditation App"
-                width="360"
-              />
-              <div class="portfolio-content">
-                <h3 class="portfolio-item-title">Meditation App</h3>
-                <p class="portfolio-item-text">App</p>
-              </div>
-            </li>
-
-            <li class="portfolio-item">
-              <img
-                src="./images/taxi-service.jpg"
-                alt="Taxi Service"
-                width="360"
-              />
-              <div class="portfolio-content">
-                <h3 class="portfolio-item-title">Taxi Service</h3>
-                <p class="portfolio-item-text">Marketing</p>
-              </div>
-            </li>
-
-            <li class="portfolio-item">
-              <img
-                src="./images/screen-illustrations.jpg"
-                alt="Screen Illustrations"
-                width="360"
-              />
-              <div class="portfolio-content">
-                <h3 class="portfolio-item-title">Screen Illustrations</h3>
-                <p class="portfolio-item-text">Design</p>
-              </div>
-            </li>
-
-            <li class="portfolio-item">
-              <img
-                src="./images/online-courses.jpg"
-                alt="Online Courses"
-                width="360"
-              />
-              <div class="portfolio-content">
-                <h3 class="portfolio-item-title">Online Courses</h3>
-                <p class="portfolio-item-text">Marketing</p>
-              </div>
-            </li>
-          </ul>
-        </div>
+      <section>
+        <h2>Our Team</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/mark-guerrero.jpg"
+              alt="Product Designer Mark Guerrero"
+              width="264"
+            />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="./images/tom-ford.jpg"
+              alt="Frontend Developer Tom Ford"
+              width="264"
+            />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./images/camila-garcia.jpg"
+              alt="Marketing specialist Camila Garcia"
+              width="264"
+            />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/daniel-wilson.jpg"
+              alt="UI Designer Daniel Wilson"
+              width="264"
+            />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
       </section>
     </main>
 
-    <!-- ===== FOOTER ===== -->
-    <footer></footer>
+    <footer>
+      <a href="./index.html">WebStudio</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
