--- a/index.html
+++ b/index.html
@@ -3,113 +3,141 @@
   <head>
     <meta charset="UTF-8" />
     <title>WebStudio</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="./index.html">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+    <!-- ===== HEADER ===== -->
+    <header class="header">
+      <nav class="nav">
+        <a href="./index.html" class="logo">
+          Web<span class="logo-studio">Studio</span>
+        </a>
+
+        <ul class="nav-list">
+          <li class="nav-item">
+            <a href="./index.html" class="nav-link">Studio</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link">Contacts</a>
+          </li>
         </ul>
       </nav>
 
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <address class="address">
+        <ul class="address-list">
+          <li class="address-item">
+            <a href="mailto:info@devstudio.com" class="address-link">
+              info@devstudio.com
+            </a>
+          </li>
+          <li class="address-item">
+            <a href="tel:+110001111111" class="address-link">
+              +11 (000) 111-11-11
+            </a>
+          </li>
         </ul>
       </address>
     </header>
 
+    <!-- ===== MAIN ===== -->
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <!-- HERO -->
+      <section class="hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="hero-button">Order Service</button>
       </section>
 
-      <section>
-        <h2>Our Advantages</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+      <!-- ADVANTAGES -->
+      <section class="advantages">
+        <h2 class="advantages-title">Our Advantages</h2>
+        <ul class="advantages-list">
+          <li class="advantages-item">
+            <h3 class="advantages-subtitle">Strategy</h3>
+            <p class="advantages-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="advantages-item">
+            <h3 class="advantages-subtitle">Punctuality</h3>
+            <p class="advantages-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="advantages-item">
+            <h3 class="advantages-subtitle">Diligence</h3>
+            <p class="advantages-text">
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
+          <li class="advantages-item">
+            <h3 class="advantages-subtitle">Technologies</h3>
+            <p class="advantages-text">
+              Design practice focused on digital experiences.
             </p>
           </li>
         </ul>
       </section>
 
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <!-- TEAM -->
+      <section class="team">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team-list">
+          <li class="team-item">
             <img
               src="./images/mark-guerrero.jpg"
               alt="Product Designer Mark Guerrero"
               width="264"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-name">Mark Guerrero</h3>
+            <p class="team-position">Product Designer</p>
           </li>
-          <li>
+
+          <li class="team-item">
             <img
               src="./images/tom-ford.jpg"
               alt="Frontend Developer Tom Ford"
               width="264"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-name">Tom Ford</h3>
+            <p class="team-position">Frontend Developer</p>
           </li>
-          <li>
+
+          <li class="team-item">
             <img
               src="./images/camila-garcia.jpg"
               alt="Marketing specialist Camila Garcia"
               width="264"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-name">Camila Garcia</h3>
+            <p class="team-position">Marketing</p>
           </li>
-          <li>
+
+          <li class="team-item">
             <img
               src="./images/daniel-wilson.jpg"
               alt="UI Designer Daniel Wilson"
               width="264"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-name">Daniel Wilson</h3>
+            <p class="team-position">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <!-- ===== FOOTER ===== -->
+    <footer class="footer">
+      <a href="./index.html" class="footer-logo">
+        Web<span class="logo-studio">Studio</span>
+      </a>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
