--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     <main>
       <!-- HERO -->
       <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="hero-button">Order Service</button>
+        <h1 class="hero-title">...</h1>
+        <button class="hero-button" type="button">...</button>
       </section>
 
       <!-- ADVANTAGES -->
