--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
         <button class="hero-button" type="button">...</button>
       </section>
 
-      <!-- ADVANTAGES -->
       <section class="advantages">
         <h2 class="advantages-title">Our Advantages</h2>
+
         <ul class="advantages-list">
           <li class="advantages-item">
             <h3 class="advantages-subtitle">Strategy</h3>
@@ -62,6 +62,7 @@
               perfect and creative solution.
             </p>
           </li>
+
           <li class="advantages-item">
             <h3 class="advantages-subtitle">Punctuality</h3>
             <p class="advantages-text">
@@ -69,6 +70,7 @@
               within the shortest possible time.
             </p>
           </li>
+
           <li class="advantages-item">
             <h3 class="advantages-subtitle">Diligence</h3>
             <p class="advantages-text">
@@ -76,10 +78,12 @@
               opportunities and minimize risk.
             </p>
           </li>
+
           <li class="advantages-item">
             <h3 class="advantages-subtitle">Technologies</h3>
             <p class="advantages-text">
-              Design practice focused on digital experiences.
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
             </p>
           </li>
         </ul>
