--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </section>
 
       <section class="advantages">
-        <h2 class="advantages-title">Our Advantages</h2>
+        <h2 class="visually-hidden">Our Advantages</h2>
 
         <ul class="advantages-list">
           <li class="advantages-item">
