--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
 
-    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -13,12 +12,10 @@
       rel="stylesheet"
     />
 
-    <!-- Styles -->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
-    <!-- ===== HEADER ===== -->
     <header class="header">
       <nav class="nav">
         <a href="./index.html" class="logo">
@@ -49,18 +46,13 @@
     </header>
 
     <main>
-      <!-- ===== HERO ===== -->
       <section class="hero">
-        <h1 class="hero-title">
-          Effective Solutions<br />
-          for Your Business
-        </h1>
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button type="button" class="hero-button">Order Service</button>
       </section>
 
-      <!-- ===== ADVANTAGES ===== -->
       <section class="advantages">
-        <h2 class="visually-hidden">Our Advantages</h2>
+        <h2>Our Advantages</h2>
 
         <ul class="advantages-list">
           <li class="advantages-item">
@@ -97,9 +89,8 @@
         </ul>
       </section>
 
-      <!-- ===== TEAM ===== -->
       <section class="team">
-        <h2 class="visually-hidden">Our Team</h2>
+        <h2>Our Team</h2>
 
         <ul class="team-list">
           <li class="team-item">
@@ -145,7 +136,6 @@
       </section>
     </main>
 
-    <!-- ===== FOOTER ===== -->
     <footer class="footer">
       <a href="./index.html" class="footer-logo">
         Web<span class="logo-studio">Studio</span>
