--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
 
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -12,10 +13,12 @@
       rel="stylesheet"
     />
 
+    <!-- ONLY ONE CSS FILE (required by tests) -->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
+    <!-- ===== HEADER ===== -->
     <header class="header">
       <nav class="nav">
         <a href="./index.html" class="logo">
@@ -46,11 +49,13 @@
     </header>
 
     <main>
+      <!-- ===== HERO ===== -->
       <section class="hero">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button type="button" class="hero-button">Order Service</button>
       </section>
 
+      <!-- ===== ADVANTAGES ===== -->
       <section class="advantages">
         <h2>Our Advantages</h2>
 
@@ -89,6 +94,7 @@
         </ul>
       </section>
 
+      <!-- ===== TEAM ===== -->
       <section class="team">
         <h2>Our Team</h2>
 
@@ -136,6 +142,7 @@
       </section>
     </main>
 
+    <!-- ===== FOOTER ===== -->
     <footer class="footer">
       <a href="./index.html" class="footer-logo">
         Web<span class="logo-studio">Studio</span>
