--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
 
     <!-- Google Fonts -->
@@ -13,27 +12,27 @@
       rel="stylesheet"
     />
 
-    <!-- ONLY ONE CSS FILE (required by tests) -->
+    <!-- Styles -->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
-    <!-- ===== HEADER ===== -->
-    <header class="header">
-      <nav class="nav">
+    <!-- ================= HEADER ================= -->
+    <header>
+      <nav>
         <a href="./index.html" class="logo">
           Web<span class="logo-studio">Studio</span>
         </a>
 
-        <ul class="nav-list">
-          <li><a href="./index.html" class="nav-link">Studio</a></li>
-          <li><a href="" class="nav-link">Portfolio</a></li>
-          <li><a href="" class="nav-link">Contacts</a></li>
+        <ul>
+          <li><a href="#" class="nav-link">Studio</a></li>
+          <li><a href="#" class="nav-link">Portfolio</a></li>
+          <li><a href="#" class="nav-link">Contacts</a></li>
         </ul>
       </nav>
 
       <address class="address">
-        <ul class="address-list">
+        <ul>
           <li>
             <a href="mailto:info@devstudio.com" class="address-link"
               >info@devstudio.com</a
@@ -49,42 +48,43 @@
     </header>
 
     <main>
-      <!-- ===== HERO ===== -->
+      <!-- ================= HERO ================= -->
       <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="hero-button">Order Service</button>
+        <h1 class="hero-title">
+          Effective Solutions for Your Business
+        </h1>
+        <button type="button" class="hero-button">
+          Order Service
+        </button>
       </section>
 
-      <!-- ===== ADVANTAGES ===== -->
+      <!-- ================= ADVANTAGES ================= -->
       <section class="advantages">
-        <h2>Our Advantages</h2>
+        <h2 class="visually-hidden">Advantages</h2>
 
-        <ul class="advantages-list">
-          <li class="advantages-item">
+        <ul>
+          <li>
             <h3 class="advantages-subtitle">Strategy</h3>
             <p class="advantages-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-
-          <li class="advantages-item">
+          <li>
             <h3 class="advantages-subtitle">Punctuality</h3>
             <p class="advantages-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-
-          <li class="advantages-item">
+          <li>
             <h3 class="advantages-subtitle">Diligence</h3>
             <p class="advantages-text">
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
-
-          <li class="advantages-item">
+          <li>
             <h3 class="advantages-subtitle">Technologies</h3>
             <p class="advantages-text">
               Design practice focused on digital experiences. We bring forth a
@@ -94,9 +94,10 @@
         </ul>
       </section>
 
-      <!-- ===== TEAM ===== -->
+      <!-- ================= TEAM ================= -->
       <section class="team">
-        <h2>Our Team</h2>
+        <!-- 🔥 ОЦЕ КЛЮЧОВА ПРАВКА -->
+        <h2 class="section-title">Our Team</h2>
 
         <ul class="team-list">
           <li class="team-item">
@@ -142,12 +143,11 @@
       </section>
     </main>
 
-    <!-- ===== FOOTER ===== -->
+    <!-- ================= FOOTER ================= -->
     <footer class="footer">
       <a href="./index.html" class="footer-logo">
         Web<span class="logo-studio">Studio</span>
       </a>
-
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
